--- a/index.html
+++ b/index.html
@@ -2,11 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do App</title>
+    <title>To-Do App</title>
+   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <script src="main.js"></script>
+    <h1>To Do App</h1>
+
+    <section id="login">
+        <h1>Login</h1>
+        <form>
+            <input type="email" id="loginEmail" placeholder="email">
+            <input type="password" id="loginPassword" placeholder="password">
+            <button id="loginSumbit">Login</button>
+        </form>
+    </section>
+
+    <section id="signup">
+        <h1>Register</h1>
+    </section>
+
+    <section id="user">
+        <h1>User Info</h1>
+    </section>
+
+    <section id="toDos">
+        <h1>My To-Do's</h1>
+    </section>
+
+    <section>
+        <h1>Add / Edit To-Do</h1>
+    </section>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
