--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         </form>
     </section>
 
-    <section id="signup">
+    <section id="register">
         <h1>Register</h1>
     </section>
 
-    <section id="user">
-        <h1>User Info</h1>
+    <section id="user" hidden>
+        <h1 id="greetings"></h1>
+        <button id='logout'>Logout</button>
     </section>
 
     <section id="toDos">
